# Industrial-Energy-Monitoring-Dashboard

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
backend/: data.csv  main.py  requirements.txt
dashboard_front/analytics_dashboard/: code.html
dashboard_front/asset_management/: code.html
dashboard_front/compliance_regulatory/: code.html
data_managment/: main.py  pyproject.toml
data_managment/data/Bronze/: organize.sh
data_managment/data/Bronze/xlsx/: FIN AOUT 2025_2292025.xlsx  FIN JUILLET 2025_2492025.xlsx  Fevrier-report1_2342026.xlsx  Fin-Decembre _2322026 (1).xlsx  Mai-report2_2442026 (1).xlsx  avril-report1_2442026.xlsx  avril-report2_2442026.xlsx  fevrier-report3_2342026.xlsx  fin novembre _1122025.xlsx  juin-report2_2442026.xlsx  july-report1_2442026.xlsx  mars-report1_2342026.xlsx  report-fevrier2_2342026.xlsx
data_managment/data/Gold/: anomaly_detection_results.csv
data_managment/data/Silver/xlsx/: Mai-report2_2442026 (1)_table_1.csv  Mai-report2_2442026 (1)_table_2.csv  Mai-report2_2442026 (1)_table_3.csv
data_managment/explore/: exp.ipynb
data_managment/pipeline/: DoclingPipeline.py  PipelineInterface.py
data_managment/post_process/quality_calculation/: CarboneIntegrityStrategy.py  ForecastContinutyStrategy.py  StrategyInterface.py  orchestrator.py
data_managment/process/: ProcessExcel.py
data_managment/schema/: PostProcess.py
data_managment/utils/: logging.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
pipeline/: DoclingPipeline.py  PipelineInterface.py
(+16 files in other folders)
